# mev-base

./: .env.example  .gitignore  ADAPTIVE_GAS_CHECKLIST.md  CLAUDE.md  Cargo.toml  debug_hang.sh  fix_filtered_gas.sh  fix_remaining.sh  foundry.toml  mev_results.json  monitor_gas_thresholds.py  pools_edc817a28e8b93b03976fbd4a3ddbc9f7d176c22.json  runClaude.sh  test_adaptive_bounds.py  test_full_integration.sh  test_gas_history_integration.sh  test_logging.sh  test_redis.py  test_redis.rs  tmp  wrap_templates.json  wrap_templates_fast.json
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
cache/: solidity-files-cache.json
contracts/: BatchGradientTestV3.sol
crates/base-revm-template/: Cargo.toml  README.md
crates/base-revm-template/src/: main.rs
crates/mev-base/: Cargo.toml
crates/mev-base/src/: backrun_analyzer.rs  benchmark_worker.rs  cached_simulation.rs  database_service.rs  flashblock_accumulator.rs  flashblock_state.rs  flashblocks.rs  gas_history_store.rs  gradient_descent.rs  gradient_descent_binary.rs  gradient_descent_fast.rs  gradient_descent_multicall.rs  gradient_descent_parallel.rs  in_memory_flashblock_state.rs  lifecycle_timing.rs  logging.rs  main.rs  metrics.rs  mev_bundle_types.rs  mev_search_worker.rs  mev_simulation.rs  mev_task_worker.rs  revm_flashblock_executor.rs  revm_flashblock_manager.rs  sequencer_service.rs  simulation.rs  stateful_simulation.rs  transaction_service.rs  wallet_service.rs
crates/mev-base/src/arbitrage/: arbitrage_analyzer.rs  atomic_executor.rs  dex.rs  dynamic_pricing.rs  mev_integration.rs  mod.rs  path_finder.rs  pool_discovery.rs  pool_fetcher.rs
crates/mev-base/src/mint_detector/: mod.rs
crates/mint-detector/: Cargo.toml  wrap_templates.json
crates/mint-detector/src/: db_state_provider.rs  inspector.rs  lib.rs  main.rs  raw_tx_reader.rs  safe_tx_reader.rs  simple_db.rs  template.rs
crates/mint-detector/tests/: scan_blocks.rs
docs/: STATEFUL_CALL_MANY_PROPOSAL.md
foundry/: foundry.toml
foundry/cache/: solidity-files-cache.json
foundry/contracts/: BatchGradientTest.sol  BatchGradientTestV2.sol  BatchGradientTestV4.sol
foundry/scripts/: TestGradientOptimizer.s.sol  TestGradientOptimizerTx.s.sol
patches/: fix-optimism-txtype.patch  skip-deposit-tx.patch
scripts/: Cargo.toml  README.md  README_MEV_MONITOR.md  README_topup.md  TestGradientOptimizer.s.sol  TestGradientOptimizerTx.s.sol  event_analysis.json  find_eth_transfer_point.py  monitor_mev.sh  monitor_mev_results.py  run_find_eth_transfer.sh  scan_events.py  send_token_tx.sh  simulate_at_index.py  test_binary_optimizer.sh  test_db_query.py  test_gas_price_output.py  test_redis.rs  topup_mev_wallets.sh  topup_wallets.py
