[package]
name = "base-revm-template"
version = "0.1.0"
edition = "2021"
description = "Template for Base mainnet REVM applications"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Core dependencies - use workspace versions
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
revm = { workspace = true }
op-revm = { workspace = true }
reth-optimism-chainspec = { workspace = true }
reth-optimism-primitives = { workspace = true }
reth-optimism-evm = { workspace = true }
reth-evm = { workspace = true }
reth-revm = { workspace = true }
reth-optimism-node = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
hex = "0.4"
eyre = "0.6"
clap = { version = "4", features = ["derive"] }
md5 = "0.7"

[[bin]]
name = "base-revm-template"
path = "src/main.rs"