[package]
name = "mint-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies - use workspace versions
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
op-alloy-rpc-types = { workspace = true }
op-alloy-provider = { workspace = true }
revm = { workspace = true }
revm-inspectors = { workspace = true }
op-revm = { workspace = true }
reth-optimism-chainspec = { workspace = true }
reth-optimism-primitives = { workspace = true }
reth-optimism-evm = { workspace = true }
reth-evm = { workspace = true }
reth-revm = { workspace = true }
reth-optimism-node = { workspace = true }

# Database access - with Optimism support
reth-db = { workspace = true }
reth-db-api = { workspace = true, features = ["op"] }
reth-codecs = { workspace = true }
reth-provider = { workspace = true }
reth-primitives = { workspace = true }
reth-node-core = { workspace = true }
reth-node-types = { workspace = true }
# reth-storage-errors = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
hex = "0.4"
eyre = "0.6"
clap = { version = "4", features = ["derive"] }
md5 = "0.7"

[lib]
name = "mint_detector"
path = "src/lib.rs"

[[bin]]
name = "mint-detector"
path = "src/main.rs"

[[bin]]
name = "scan-wraps"
path = "src/bin/scan_wraps.rs"

[[bin]]
name = "find-pools"
path = "src/bin/find_pools.rs"